--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>2</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -33,8 +33,8 @@
      <widget class="QPushButton" name="pushButton_3">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>30</y>
+        <x>20</x>
+        <y>20</y>
         <width>161</width>
         <height>121</height>
        </rect>
@@ -59,8 +59,8 @@
      <widget class="QGroupBox" name="groupBox">
       <property name="geometry">
        <rect>
-        <x>100</x>
-        <y>80</y>
+        <x>60</x>
+        <y>210</y>
         <width>371</width>
         <height>241</height>
        </rect>
@@ -215,8 +215,8 @@ selection-background-color: rgb(85, 170, 255);</string>
      <widget class="QGroupBox" name="groupBox_2">
       <property name="geometry">
        <rect>
-        <x>100</x>
-        <y>350</y>
+        <x>60</x>
+        <y>460</y>
         <width>371</width>
         <height>161</height>
        </rect>
@@ -274,8 +274,8 @@ selection-background-color: rgb(85, 170, 255);</string>
      <widget class="QGroupBox" name="groupBox_3">
       <property name="geometry">
        <rect>
-        <x>490</x>
-        <y>80</y>
+        <x>470</x>
+        <y>220</y>
         <width>411</width>
         <height>451</height>
        </rect>
@@ -297,10 +297,10 @@ selection-background-color: rgb(85, 170, 255);</string>
      <widget class="QGroupBox" name="groupBox_4">
       <property name="geometry">
        <rect>
-        <x>940</x>
-        <y>90</y>
+        <x>930</x>
+        <y>220</y>
         <width>231</width>
-        <height>91</height>
+        <height>101</height>
        </rect>
       </property>
       <property name="title">
@@ -325,9 +325,9 @@ background: white;</string>
      <widget class="QGroupBox" name="groupBox_5">
       <property name="geometry">
        <rect>
-        <x>940</x>
-        <y>230</y>
-        <width>221</width>
+        <x>930</x>
+        <y>380</y>
+        <width>231</width>
         <height>131</height>
        </rect>
       </property>
@@ -382,8 +382,8 @@ p, li { white-space: pre-wrap; }
      <widget class="QPushButton" name="pushButton_4">
       <property name="geometry">
        <rect>
-        <x>1020</x>
-        <y>430</y>
+        <x>1010</x>
+        <y>570</y>
         <width>75</width>
         <height>23</height>
        </rect>
@@ -418,21 +418,47 @@ p, li { white-space: pre-wrap; }
      <widget class="QCalendarWidget" name="calendarWidget">
       <property name="geometry">
        <rect>
-        <x>110</x>
-        <y>90</y>
-        <width>256</width>
-        <height>190</height>
+        <x>120</x>
+        <y>190</y>
+        <width>351</width>
+        <height>241</height>
        </rect>
       </property>
      </widget>
      <widget class="QTableView" name="tableView_2">
       <property name="geometry">
        <rect>
-        <x>430</x>
-        <y>50</y>
+        <x>590</x>
+        <y>180</y>
         <width>331</width>
         <height>371</height>
        </rect>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_7">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>10</y>
+        <width>161</width>
+        <height>121</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>../../Downloads/logoQt.png</normaloff>../../Downloads/logoQt.png</iconset>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>200</width>
+        <height>200</height>
+       </size>
+      </property>
+      <property name="flat">
+       <bool>true</bool>
       </property>
      </widget>
     </widget>
@@ -450,28 +476,11 @@ p, li { white-space: pre-wrap; }
        </rect>
       </property>
      </widget>
-     <widget class="QTextEdit" name="textEdit">
-      <property name="geometry">
-       <rect>
-        <x>140</x>
-        <y>460</y>
-        <width>466</width>
-        <height>71</height>
-       </rect>
-      </property>
-      <property name="html">
-       <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'MS Shell Dlg 2'; font-size:16pt; font-weight:600;&quot;&gt;Info-4geek.com&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-      </property>
-     </widget>
      <widget class="QWidget" name="layoutWidget_2">
       <property name="geometry">
        <rect>
-        <x>200</x>
-        <y>10</y>
+        <x>240</x>
+        <y>140</y>
         <width>327</width>
         <height>402</height>
        </rect>
@@ -601,8 +610,8 @@ p, li { white-space: pre-wrap; }
      <widget class="QWidget" name="layoutWidget_3">
       <property name="geometry">
        <rect>
-        <x>200</x>
-        <y>10</y>
+        <x>250</x>
+        <y>100</y>
         <width>204</width>
         <height>25</height>
        </rect>
@@ -612,8 +621,8 @@ p, li { white-space: pre-wrap; }
      <widget class="QPushButton" name="sendBtn">
       <property name="geometry">
        <rect>
-        <x>440</x>
-        <y>430</y>
+        <x>450</x>
+        <y>560</y>
         <width>75</width>
         <height>23</height>
        </rect>
@@ -625,14 +634,66 @@ p, li { white-space: pre-wrap; }
      <widget class="QPushButton" name="exitBtn">
       <property name="geometry">
        <rect>
-        <x>520</x>
-        <y>430</y>
+        <x>540</x>
+        <y>560</y>
         <width>75</width>
         <height>23</height>
        </rect>
       </property>
       <property name="text">
        <string>Exit</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_8">
+      <property name="geometry">
+       <rect>
+        <x>1100</x>
+        <y>620</y>
+        <width>161</width>
+        <height>121</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>../../Downloads/logoQt.png</normaloff>../../Downloads/logoQt.png</iconset>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>200</width>
+        <height>200</height>
+       </size>
+      </property>
+      <property name="flat">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_9">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>10</y>
+        <width>161</width>
+        <height>121</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>../../Downloads/logoQt.png</normaloff>../../Downloads/logoQt.png</iconset>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>200</width>
+        <height>200</height>
+       </size>
+      </property>
+      <property name="flat">
+       <bool>true</bool>
       </property>
      </widget>
     </widget>
