--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -31,10 +31,11 @@
     </property>
     <property name="styleSheet">
      <string notr="true">background-color: rgb(255, 255, 255);
-background-color: rgb(255, 255, 255);</string>
+background-color: rgb(255, 255, 255);
+</string>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -43,14 +44,17 @@ background-color: rgb(255, 255, 255);</string>
      <widget class="QGroupBox" name="groupBox">
       <property name="geometry">
        <rect>
-        <x>20</x>
+        <x>30</x>
         <y>30</y>
         <width>341</width>
-        <height>291</height>
+        <height>281</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
+      </property>
       <property name="title">
-       <string>ajout/modification</string>
+       <string>Ajout/Modification</string>
       </property>
       <widget class="QLabel" name="label">
        <property name="geometry">
@@ -83,7 +87,7 @@ background-color: rgb(255, 255, 255);</string>
         <rect>
          <x>30</x>
          <y>120</y>
-         <width>56</width>
+         <width>71</width>
          <height>16</height>
         </rect>
        </property>
@@ -96,8 +100,8 @@ background-color: rgb(255, 255, 255);</string>
         <rect>
          <x>30</x>
          <y>160</y>
-         <width>121</width>
-         <height>16</height>
+         <width>151</width>
+         <height>21</height>
         </rect>
        </property>
        <property name="text">
@@ -109,8 +113,8 @@ background-color: rgb(255, 255, 255);</string>
         <rect>
          <x>30</x>
          <y>210</y>
-         <width>56</width>
-         <height>16</height>
+         <width>61</width>
+         <height>21</height>
         </rect>
        </property>
        <property name="text">
@@ -120,8 +124,8 @@ background-color: rgb(255, 255, 255);</string>
       <widget class="QLineEdit" name="le_cin">
        <property name="geometry">
         <rect>
-         <x>170</x>
-         <y>30</y>
+         <x>190</x>
+         <y>40</y>
          <width>113</width>
          <height>22</height>
         </rect>
@@ -130,8 +134,8 @@ background-color: rgb(255, 255, 255);</string>
       <widget class="QLineEdit" name="le_nom">
        <property name="geometry">
         <rect>
-         <x>170</x>
-         <y>70</y>
+         <x>190</x>
+         <y>80</y>
          <width>113</width>
          <height>22</height>
         </rect>
@@ -140,8 +144,8 @@ background-color: rgb(255, 255, 255);</string>
       <widget class="QLineEdit" name="le_prenom">
        <property name="geometry">
         <rect>
-         <x>170</x>
-         <y>110</y>
+         <x>190</x>
+         <y>120</y>
          <width>113</width>
          <height>22</height>
         </rect>
@@ -150,7 +154,7 @@ background-color: rgb(255, 255, 255);</string>
       <widget class="QLineEdit" name="le_num">
        <property name="geometry">
         <rect>
-         <x>170</x>
+         <x>190</x>
          <y>160</y>
          <width>113</width>
          <height>22</height>
@@ -160,7 +164,7 @@ background-color: rgb(255, 255, 255);</string>
       <widget class="QLineEdit" name="le_type">
        <property name="geometry">
         <rect>
-         <x>170</x>
+         <x>190</x>
          <y>210</y>
          <width>113</width>
          <height>22</height>
@@ -177,6 +181,9 @@ background-color: rgb(255, 255, 255);</string>
         <height>31</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
+      </property>
       <property name="text">
        <string>Ajouter </string>
       </property>
@@ -190,6 +197,10 @@ background-color: rgb(255, 255, 255);</string>
         <height>31</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;
+</string>
+      </property>
       <property name="text">
        <string>Modifier</string>
       </property>
@@ -200,11 +211,12 @@ background-color: rgb(255, 255, 255);</string>
         <x>400</x>
         <y>510</y>
         <width>211</width>
-        <height>51</height>
+        <height>61</height>
        </rect>
       </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
+	font: 75 10pt &quot;MS Shell Dlg 2&quot;;
 
 padding: 1px;
 
@@ -265,11 +277,14 @@ transition: all 0.4s ease 0s;
      <widget class="QGroupBox" name="groupBox_9">
       <property name="geometry">
        <rect>
-        <x>20</x>
+        <x>30</x>
         <y>340</y>
         <width>341</width>
         <height>101</height>
        </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
       </property>
       <property name="title">
        <string>Suppression</string>
@@ -307,6 +322,9 @@ transition: all 0.4s ease 0s;
         <height>31</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
+      </property>
       <property name="text">
        <string>Supprimer</string>
       </property>
@@ -314,11 +332,14 @@ transition: all 0.4s ease 0s;
      <widget class="QGroupBox" name="groupBox_10">
       <property name="geometry">
        <rect>
-        <x>530</x>
+        <x>510</x>
         <y>20</y>
         <width>581</width>
         <height>311</height>
        </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
       </property>
       <property name="title">
        <string>Liste des clients</string>
@@ -332,29 +353,38 @@ transition: all 0.4s ease 0s;
          <height>261</height>
         </rect>
        </property>
+       <property name="styleSheet">
+        <string notr="true">font: 75 9pt &quot;MS Shell Dlg 2&quot;;</string>
+       </property>
       </widget>
      </widget>
      <widget class="QPushButton" name="pushButton_12">
       <property name="geometry">
        <rect>
-        <x>1140</x>
+        <x>1110</x>
         <y>180</y>
-        <width>121</width>
-        <height>31</height>
+        <width>151</width>
+        <height>41</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
+      </property>
       <property name="text">
-       <string>Exporter en Excel</string>
+       <string>Exporter en EXCEL</string>
       </property>
      </widget>
      <widget class="QGroupBox" name="groupBox_11">
       <property name="geometry">
        <rect>
-        <x>810</x>
+        <x>790</x>
         <y>340</y>
         <width>301</width>
         <height>101</height>
        </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
       </property>
       <property name="title">
        <string>Rechercher</string>
@@ -386,11 +416,14 @@ transition: all 0.4s ease 0s;
      <widget class="QPushButton" name="pushButton_13">
       <property name="geometry">
        <rect>
-        <x>1140</x>
+        <x>1120</x>
         <y>370</y>
         <width>121</width>
         <height>31</height>
        </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
       </property>
       <property name="text">
        <string>Rechercher</string>
@@ -399,11 +432,14 @@ transition: all 0.4s ease 0s;
      <widget class="QGroupBox" name="groupBox_3">
       <property name="geometry">
        <rect>
-        <x>470</x>
+        <x>430</x>
         <y>340</y>
         <width>291</width>
         <height>101</height>
        </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
       </property>
       <property name="title">
        <string>Trier par nom:</string>
@@ -426,7 +462,7 @@ transition: all 0.4s ease 0s;
         <rect>
          <x>40</x>
          <y>70</y>
-         <width>101</width>
+         <width>141</width>
          <height>21</height>
         </rect>
        </property>
@@ -438,11 +474,14 @@ transition: all 0.4s ease 0s;
      <widget class="QGroupBox" name="groupBox_4">
       <property name="geometry">
        <rect>
-        <x>810</x>
+        <x>790</x>
         <y>460</y>
         <width>301</width>
         <height>101</height>
        </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
       </property>
       <property name="title">
        <string>Historique d'ajout client</string>
@@ -452,7 +491,7 @@ transition: all 0.4s ease 0s;
         <rect>
          <x>20</x>
          <y>40</y>
-         <width>111</width>
+         <width>121</width>
          <height>31</height>
         </rect>
        </property>
@@ -465,7 +504,7 @@ transition: all 0.4s ease 0s;
         <rect>
          <x>150</x>
          <y>40</y>
-         <width>110</width>
+         <width>121</width>
          <height>31</height>
         </rect>
        </property>
@@ -491,11 +530,14 @@ transition: all 0.4s ease 0s;
      <widget class="QPushButton" name="historique">
       <property name="geometry">
        <rect>
-        <x>1140</x>
+        <x>1120</x>
         <y>490</y>
         <width>121</width>
         <height>31</height>
        </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
       </property>
       <property name="text">
        <string>Historique</string>
@@ -538,16 +580,19 @@ transition: all 0.4s ease 0s;
         <height>531</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
+      </property>
       <property name="title">
-       <string>statistique client</string>
+       <string>Statistique clients</string>
       </property>
       <widget class="QPushButton" name="pushButton_3">
        <property name="geometry">
         <rect>
          <x>390</x>
-         <y>460</y>
+         <y>450</y>
          <width>231</width>
-         <height>51</height>
+         <height>61</height>
         </rect>
        </property>
        <property name="toolTip">
@@ -632,6 +677,102 @@ transition: all 0.4s ease 0s;
        <rect>
         <x>1140</x>
         <y>20</y>
+        <width>121</width>
+        <height>111</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>../logo.png</normaloff>../logo.png</iconset>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>120</width>
+        <height>120</height>
+       </size>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="tab_2">
+     <attribute name="title">
+      <string>Embarqué</string>
+     </attribute>
+     <widget class="QGroupBox" name="groupBox_2">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>80</y>
+        <width>311</width>
+        <height>221</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
+      </property>
+      <property name="title">
+       <string>Gestion Parking</string>
+      </property>
+      <widget class="QLabel" name="label_6">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>60</y>
+         <width>56</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>CIN :</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_7">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>120</y>
+         <width>56</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Etat :</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="CIN">
+       <property name="geometry">
+        <rect>
+         <x>110</x>
+         <y>60</y>
+         <width>131</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>TextLabel</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="Etat">
+       <property name="geometry">
+        <rect>
+         <x>110</x>
+         <y>120</y>
+         <width>121</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>TextLabel</string>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QPushButton" name="pushButton_4">
+      <property name="geometry">
+       <rect>
+        <x>1070</x>
+        <y>30</y>
         <width>121</width>
         <height>111</height>
        </rect>
