--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>2</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -424,6 +424,11 @@ p, li { white-space: pre-wrap; }
         <height>241</height>
        </rect>
       </property>
+      <property name="font">
+       <font>
+        <family>MS Shell Dlg 2</family>
+       </font>
+      </property>
      </widget>
      <widget class="QTableView" name="tableView_2">
       <property name="geometry">
@@ -459,6 +464,54 @@ p, li { white-space: pre-wrap; }
       </property>
       <property name="flat">
        <bool>true</bool>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="tab_4">
+     <attribute name="title">
+      <string>arduino</string>
+     </attribute>
+     <widget class="QListView" name="listView_4">
+      <property name="geometry">
+       <rect>
+        <x>-90</x>
+        <y>-70</y>
+        <width>1401</width>
+        <height>751</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="arduinoo">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>130</y>
+        <width>113</width>
+        <height>20</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_14">
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>130</y>
+        <width>47</width>
+        <height>14</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Nom</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="pre">
+      <property name="geometry">
+       <rect>
+        <x>270</x>
+        <y>130</y>
+        <width>113</width>
+        <height>20</height>
+       </rect>
       </property>
      </widget>
     </widget>
